# AI_Agents_GL

./: .gitignore  README.md  YFinance Agent using MCP.ipynb  main.py  pyproject.toml  yfserver.py
CrewAI/: Agents Components - CrewAI.ipynb  Function Calling in CrewAI.ipynb
CrewAI/entity-memory/: chroma.sqlite3
CrewAI/short-term-memory/: chroma.sqlite3
LangGraph/: Agents Components - Langgraph.ipynb  Compositional Workflows in Langgraph.ipynb  Function Calling in LangGraph.ipynb
